Enhancement: made the scroll bar thinner. resolves #16

--- a/src/index.css
+++ b/src/index.css
@@ -6,20 +6,31 @@ section {
     @apply max-w-[1200px] mx-auto
 }
 
+/* scroll bar */
 body::scrollbar,
 .scrollbar::scrollbar {
-    width: 10px;
+    width: 6px;
+    background-color: rgb(00 130 0);
+}
+
+body::scrollbar:horizontal,
+.scrollbar::scrollbar:horizontal {
+    width: 6px;
     background-color: rgb(00 130 0);
 }
 
 body::-webkit-scrollbar,
 .scrollbar::-webkit-scrollbar {
-    width: 10px;
+    width: 6px;
+}
+
+body::-webkit-scrollbar:horizontal,
+.scrollbar::-webkit-scrollbar:horizontal {
+    width: 6px;
 }
 
 body::-webkit-scrollbar-thumb,
 .scrollbar::-webkit-scrollbar-thumb {
-    border-left: 2px solid black;
     border-radius: 5px;
     background-color: rgb(00 130 0);
 }
