Enhancement: added some fonts. resolves #18

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -18,7 +18,7 @@ import SocialMedia from './shared/socialMedia.astro';
         }
     </style>
     <div class="z-10 gradient-70 animate-loadFromLeft">
-        <p class="text-primary capitalize uppercase text-xl tracking-wider">
+        <p class="text-primary capitalize uppercase text-xl tracking-wider mb-1">
             I'm astronaut
         </p>
         <!-- hero title -->
@@ -48,10 +48,10 @@ import SocialMedia from './shared/socialMedia.astro';
             }
         </h1>
 
-        <p class={`max-w-[25rem] leading-relaxed first-letter:uppercase`}>
+        <p class={`max-w-[25rem] leading-relaxed first-letter:uppercase text-xl`}>
             I write sweat code <Icon name="noto:honey-pot" class="w-6 inline" /> for the web,
         </p>
-        <p class={`max-w-[25rem] leading-relaxed first-letter:uppercase`}>
+        <p class={`max-w-[25rem] leading-relaxed first-letter:uppercase text-xl`}>
             With the help of sweat technologies.
         </p>
         <SocialMedia />
