--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -3,7 +3,7 @@ import Icon from 'astro-icon';
 import SocialMedia from './shared/socialMedia.astro';
 ---
 
-<section id="intro" class="relative px-main xs>:px-4 pt-[4rem] flex justify-between">
+<section id="intro" class="relative px-main xs>:px-4 pt-[4rem] flex justify-between items-center">
     <!-- tailwind can not do this -->
     <style>
         .gradient-70 {
@@ -96,8 +96,8 @@ import SocialMedia from './shared/socialMedia.astro';
             }
         }
     </style>
-    <div class="w-[190px] relative astro astro>:hidden animate-loadFromRight">
-        <Icon class="absolute translate-y-[-50%] top-1/2 text-primary/50 w-2xl" name="fa-solid:user-astronaut" />
+    <div class="w-[190px] absolute flex astro astro>:hidden animate-loadFromRight">
+        <Icon class="text-primary/50 w-2xl" name="fa-solid:user-astronaut" />
         <!-- <Icon class='absolute z-20 w-2xl' name='mdi:fire-circle'/> -->
         <!-- <Icon class='absolute top-[-120px] left-[-30px] w-[20rem] text-primary' name='mdi:fire'/> -->
     </div>
