Enhancement: added some A11Y labels. resolves #20

--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -8,7 +8,7 @@ const classes = {
 };
 ---
 
-<section id="about" class="text-slate-50 pt-[6rem] px-main xs>:px-4">
+<section aria-label="my story" id="about" class="text-slate-50 pt-[6rem] px-main xs>:px-4">
     <h2
         class={`text-center capitalize text-2xl relative
                     before:absolute
