--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -13,7 +13,7 @@ const classes = {
     });
 </script>
 
-<section id="contact" class="text-slate-50 pt-[6rem] px-main xs>:px-4">
+<section aria-label="contact" id="contact" class="text-slate-50 pt-[6rem] px-main xs>:px-4">
     <h2
         class={`text-center capitalize text-2xl pb-[3rem] relative
                     before:absolute
