--- a/src/components/shared/socialMedia.astro
+++ b/src/components/shared/socialMedia.astro
@@ -3,7 +3,7 @@ import Icon from 'astro-icon';
 const classes = {ul: Astro.props.style};
 ---
 
-<ul aria-label="socialMedia" class={`flex gap-3 mt-5 text-primary ${classes.ul}`}>
+<ul aria-label="socialMedia links" class={`flex gap-3 mt-5 text-primary ${classes.ul}`}>
     <li>
         <a href="https:twitter.com" target="_blank"
             ><Icon
