minor: few tweaks

--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -13,7 +13,11 @@ const classes = {
     });
 </script>
 
-<section aria-label="contact" id="contact" class="text-slate-50 pt-[6rem] px-main xs>:px-4">
+<section
+    aria-label="contact"
+    id="contact"
+    class="text-slate-50 pt-[6rem] px-main xs>:px-4"
+>
     <h2
         class={`text-center capitalize text-2xl pb-[3rem] relative
                     before:absolute
@@ -22,7 +26,7 @@ const classes = {
     >
         Get <span class="text-primary">In Touch</span>
     </h2>
-    <form class="mx-auto max-w-[400px]" id="form">
+    <form data-netlify="true" class="mx-auto max-w-[400px]" id="form">
         <input
             aria-label="your name"
             type="text"
