--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -65,22 +65,18 @@ import SocialMedia from './shared/socialMedia.astro';
         <div aria-label="social media links" class="flex flex-wrap gap-7 mt-8">
             <a
                 class={`text-primary capitalize py-[5px] border-[1px] border-primary px-3 py-2 rounded-xl
-                        subtleHoverSlider group`}
+                        subtleHoverSlider group flex justify-center items-center`}
                 href="#contact"
             >
                 <Icon
                     name="ion:paper-airplane"
                     class="mr-2 w-6 inline text-primary group-hover:rotate-[35deg] duration-300"
                 />
-                <!-- <Icon
-                        name="mdi:hand-wave-outline"
-                        class="inline text-primary mr-2 w-7 group-hover:scale-[1.2] duration-300"
-                    /> -->
                 Get in Touch</a
             >
             <a
                 class={`text-primary capitalize py-[5px] border-[1px] border-primary px-3 py-2 rounded-xl
-                        subtleHoverSlider group`}
+                        subtleHoverSlider group flex justify-center items-center`}
                 href="/media/projects/snipshare.jpeg"
                 download="astronaut_resume.pdf"
             >
