minor: few tweaks

--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -26,7 +26,7 @@ const classes = {
     >
         Get <span class="text-primary">In Touch</span>
     </h2>
-    <form data-netlify="true" class="mx-auto max-w-[400px]" id="form">
+    <form data-netlify="true" name='contact form' class="mx-auto max-w-[400px]" id="form">
         <input
             aria-label="your name"
             type="text"
