fix: contact form placeholder change

--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -39,7 +39,7 @@ const classes = {
             type="email"
             name="email"
             class={classes.input}
-            placeholder="Message"
+            placeholder="Email"
         />
         <textarea
             aria-label="your message"
