minor: setting form for netlify forms

--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -7,10 +7,10 @@ const classes = {
 ---
 
 <script>
-    const form = document.getElementById('form');
-    form.addEventListener('submit', (e) => {
-        e.preventDefault();
-    });
+    // const form = document.getElementById('form');
+    // form.addEventListener('submit', (e) => {
+    //     e.preventDefault();
+    // });
 </script>
 
 <section
