Preventing Problems: used the static svg icons instead of the dynamically fetching them online in dev mode. resolves #23

--- a/src/components/shared/socialMedia.astro
+++ b/src/components/shared/socialMedia.astro
@@ -5,27 +5,57 @@ const classes = {ul: Astro.props.style};
 
 <ul aria-label="socialMedia links" class={`flex gap-3 mt-5 text-primary ${classes.ul}`}>
     <li>
-        <a href="https:twitter.com" target="_blank"
-            ><Icon
+        <a href="https:twitter.com" target="_blank">
+            <!-- <Icon
                 name="ph:twitter-logo-bold"
                 class="h-10 w-8 hover:scale-[1.2] duration-300"
-            />
+            /> -->
+            <svg
+                viewBox="0 0 256 256"
+                class="h-10 w-8 hover:scale-[1.2] duration-300"
+                astro-icon="ph:twitter-logo-bold"
+            >
+                <path
+                    fill="currentColor"
+                    d="M251.1 67.4A12 12 0 0 0 240 60h-28.2A52 52 0 0 0 116 88v.8c-37.3-11.5-67.2-41-67.5-41.3a12 12 0 0 0-20.3 6.4c-9 49.6 6 83 20.1 102.2a112.3 112.3 0 0 0 22 22.5C55.9 193 36 200.7 35.8 200.8a11.7 11.7 0 0 0-7.2 7.5 12.3 12.3 0 0 0 1.4 10.4c1.9 2.9 13.4 17.3 50 17.3 72.1 0 132.5-55.1 139.3-126.4l29.2-29.1a12.2 12.2 0 0 0 2.6-13.1zm-51.8 28.4a11.3 11.3 0 0 0-3.5 7.7C191.9 164.3 141 212 80 212a89.4 89.4 0 0 1-12.5-.8c10.4-6.7 22.2-16.1 30.5-28.5a12.1 12.1 0 0 0 1.6-9.8 11.8 11.8 0 0 0-6.2-7.6c-2-1.1-45.6-24.2-43.9-85.4 17.2 13.1 45 30.7 76.5 35.9a12 12 0 0 0 14-11.8V88a28.3 28.3 0 0 1 28.4-28 28 28 0 0 1 25.3 16.8 11.9 11.9 0 0 0 11 7.2h6.3z"
+                ></path>
+            </svg>
         </a>
     </li>
     <li>
-        <a href="https:linkedin.com" target="_blank"
-            ><Icon
+        <a href="https:linkedin.com" target="_blank">
+            <!-- <Icon
                 name="ri:linkedin-line"
                 class="h-10 w-8 hover:scale-[1.2] duration-300"
-            />
+            /> -->
+            <svg
+                viewBox="0 0 24 24"
+                class="h-10 w-8 hover:scale-[1.2] duration-300"
+                astro-icon="ri:linkedin-line"
+            >
+                <path
+                    fill="currentColor"
+                    d="M12 9.55C12.917 8.613 14.111 8 15.5 8a5.5 5.5 0 0 1 5.5 5.5V21h-2v-7.5a3.5 3.5 0 0 0-7 0V21h-2V8.5h2v1.05zM5 6.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm-1 2h2V21H4V8.5z"
+                ></path>
+            </svg>
         </a>
     </li>
     <li>
-        <a href="https:github.com" target="_blank"
-            ><Icon
+        <a href="https:github.com" target="_blank">
+            <!-- <Icon
                 name="ri:github-line"
                 class="h-10 w-8 hover:scale-[1.2] duration-300"
-            />
+            /> -->
+            <svg
+                viewBox="0 0 24 24"
+                class="h-10 w-8 hover:scale-[1.2] duration-300"
+                astro-icon="ri:github-line"
+            >
+                <path
+                    fill="currentColor"
+                    d="M5.883 18.653c-.3-.2-.558-.455-.86-.816a50.32 50.32 0 0 1-.466-.579c-.463-.575-.755-.84-1.057-.949a1 1 0 0 1 .676-1.883c.752.27 1.261.735 1.947 1.588-.094-.117.34.427.433.539.19.227.33.365.44.438.204.137.587.196 1.15.14.023-.382.094-.753.202-1.095C5.38 15.31 3.7 13.396 3.7 9.64c0-1.24.37-2.356 1.058-3.292-.218-.894-.185-1.975.302-3.192a1 1 0 0 1 .63-.582c.081-.024.127-.035.208-.047.803-.123 1.937.17 3.415 1.096A11.731 11.731 0 0 1 12 3.315c.912 0 1.818.104 2.684.308 1.477-.933 2.613-1.226 3.422-1.096.085.013.157.03.218.05a1 1 0 0 1 .616.58c.487 1.216.52 2.297.302 3.19.691.936 1.058 2.045 1.058 3.293 0 3.757-1.674 5.665-4.642 6.392.125.415.19.879.19 1.38a300.492 300.492 0 0 1-.012 2.716 1 1 0 0 1-.019 1.958c-1.139.228-1.983-.532-1.983-1.525l.002-.446.005-.705c.005-.708.007-1.338.007-1.998 0-.697-.183-1.152-.425-1.36-.661-.57-.326-1.655.54-1.752 2.967-.333 4.337-1.482 4.337-4.66 0-.955-.312-1.744-.913-2.404a1 1 0 0 1-.19-1.045c.166-.414.237-.957.096-1.614l-.01.003c-.491.139-1.11.44-1.858.949a1 1 0 0 1-.833.135A9.626 9.626 0 0 0 12 5.315c-.89 0-1.772.119-2.592.35a1 1 0 0 1-.83-.134c-.752-.507-1.374-.807-1.868-.947-.144.653-.073 1.194.092 1.607a1 1 0 0 1-.189 1.045C6.016 7.89 5.7 8.694 5.7 9.64c0 3.172 1.371 4.328 4.322 4.66.865.097 1.201 1.177.544 1.748-.192.168-.429.732-.429 1.364v3.15c0 .986-.835 1.725-1.96 1.528a1 1 0 0 1-.04-1.962v-.99c-.91.061-1.662-.088-2.254-.485z"
+                ></path>
+            </svg>
         </a>
     </li>
 </ul>
