--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -19,7 +19,7 @@ const classes = {
     >
         Get <span class="text-primary">In Touch</span>
     </h2>
-    <form data-netlify="true" name='contact form' class="mx-auto max-w-[400px]" id="form">
+    <form data-netlify="true" name="contact form" class="mx-auto max-w-[400px]" id="form">
         <input
             aria-label="your name"
             type="text"
@@ -46,10 +46,20 @@ const classes = {
             type="submit"
             class="cursor-pointer text-lg border-l-2 border-l-primary px-2 py-1 mt-3 subtleHoverSlider group"
         >
-            <Icon
+            <!-- <Icon
                 name="ion:paper-airplane"
                 class="mr-2 w-6 inline text-primary group-hover:rotate-[35deg] duration-300"
-            />
+            /> -->
+            <svg
+                viewBox="0 0 512 512"
+                class="mr-2 w-6 inline text-primary group-hover:rotate-[35deg] duration-300"
+                astro-icon="ion:paper-airplane"
+            >
+                <path
+                    fill="currentColor"
+                    d="m32 272 128 48 16 160 80-112 112 112L480 32 32 272zm318.7 145.4L256 320l128-176-192 153.8-82.6-31 322-172.5-80.7 323.1z"
+                ></path>
+            </svg>
             Sumbit
         </button>
     </form>
