--- a/src/components/portfolio.astro
+++ b/src/components/portfolio.astro
@@ -28,7 +28,7 @@ const projectItems: projectItemsT = [
         card: {
             width: 400,
             aspectRatio: '1:1',
-            mediaLink: `${shared.mediaAddress}/snipshare.jpeg`,
+            mediaLink: `${shared.mediaAddress}/snipshare.png`,
             previewLink: `${shared.hostingAddress}/snipshare`,
             sourceCodeLink: `${shared.sourceCodeAddress}/snipeshare`,
         },
@@ -89,8 +89,30 @@ const projectItems: projectItemsT = [
                                         'preview',
                                         'ic:twotone-remove-red-eye',
                                         item.card.previewLink,
+                                        <svg viewBox="0 0 24 24" class="w-8 mr-1 inline group-hover:scale-[1.2] duration-300"
+                                            astro-icon="ic:twotone-remove-red-eye">
+                                            <path fill="currentColor"
+                                                d="M12 6.5A9.77 9.77 0 0 0 3.18 12c1.65 3.37 5.02 5.5 8.82 5.5s7.17-2.13 8.82-5.5A9.77 9.77 0 0 0 12 6.5zm0 10c-2.48 0-4.5-2.02-4.5-4.5S9.52 7.5 12 7.5s4.5 2.02 4.5 4.5-2.02 4.5-4.5 4.5z"
+                                                opacity=".3" />
+                                            <path fill="currentColor"
+                                                d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zm0 13A9.77 9.77 0 0 1 3.18 12C4.83 8.63 8.21 6.5 12 6.5s7.17 2.13 8.82 5.5A9.77 9.77 0 0 1 12 17.5zm0-10c-2.48 0-4.5 2.02-4.5 4.5s2.02 4.5 4.5 4.5 4.5-2.02 4.5-4.5-2.02-4.5-4.5-4.5zm0 7a2.5 2.5 0 0 1 0-5 2.5 2.5 0 0 1 0 5z" />
+                                        </svg>
                                     ],
-                                    ['code', 'ph:code', item.card.sourceCodeLink],
+                                    [
+                                        'code', 
+                                        'ph:code',
+                                        item.card.sourceCodeLink,
+                                        <svg
+                                            viewBox="0 0 256 256"
+                                            class="w-8 mr-1 inline group-hover:scale-[1.2] duration-300"
+                                            astro-icon="ph:code"
+                                        >
+                                            <path
+                                                fill="currentColor"
+                                                d="M69.1 94.1 28.5 128l40.6 33.9a7.9 7.9 0 0 1 1.1 11.2A8.1 8.1 0 0 1 64 176a7.7 7.7 0 0 1-5.1-1.9l-48-40a7.9 7.9 0 0 1 0-12.2l48-40a8 8 0 1 1 10.2 12.2zm176 27.8-48-40a8 8 0 0 0-10.2 12.2l40.6 33.9-40.6 33.9A8 8 0 0 0 192 176a7.7 7.7 0 0 0 5.1-1.9l48-40a7.9 7.9 0 0 0 0-12.2zm-82.4-89.4a7.9 7.9 0 0 0-10.2 4.8l-64 176a7.9 7.9 0 0 0 4.8 10.2 8.6 8.6 0 0 0 2.7.5 7.9 7.9 0 0 0 7.5-5.3l64-176a7.9 7.9 0 0 0-4.8-10.2z"
+                                            />
+                                        </svg>,
+                                    ]
                                 ].map((button) => {
                                     return (
                                         <a
@@ -98,10 +120,13 @@ const projectItems: projectItemsT = [
                                             class="w-max text-primary border-[1px] border-primary px-3 py-1 rounded-xl
                                             subtleHoverSlider group"
                                         >
+                                        <!--
                                             <Icon
                                                 name={button[1]}
                                                 class="w-8 mr-1 inline group-hover:scale-[1.2] duration-300"
                                             />
+                                        -->
+                                        {button[3]}
                                             {button[0]}
                                         </a>
                                     );
