--- a/src/components/skills.astro
+++ b/src/components/skills.astro
@@ -1,32 +1,9 @@
 ---
 import Icon from 'astro-icon';
 const classes = {};
-
-const skills = [
-    ['html', 'mdi:language-html5'],
-    ['css', 'mdi:language-css3'],
-    ['tailwind', 'mdi:tailwind'],
-    ['javascript', 'mdi:language-javascript'],
-    ['react', 'mdi:react'],
-    ['nodejs', 'mdi:nodejs'],
-    ['expressjs', 'simple-icons:express'],
-    ['vite', 'file-icons:vite'],
-    ['webpack', 'mdi:webpack'],
-    ['Git', 'mdi:git'],
-    ['Github', 'mdi:github'],
-
-    //not sure
-    // ['Rest APIs', 'mdi:github'],
-    // ['neovim', 'simple-icons:neovim'],
-    // ['debian', 'grommet-icons:debian'],
-
-    // not good at
-    // ['Mysql', 'grommet-icons:mysql'],
-    // ['astrojs', 'simple-icons:astro'],
-];
 ---
 
-<section aria-label="skills" id='skills' class="text-slate-50 pt-[6rem] px-main xs>:px-4">
+<section aria-label="skills" id="skills" class="text-slate-50 pt-[6rem] px-main xs>:px-4">
     <h2
         class={`text-center capitalize text-2xl pb-[3rem] relative
               before:absolute
@@ -43,13 +20,183 @@ const skills = [
     </style>
     <ul class="skillsGrid grid gap-5 max-w-lg mx-auto">
         {
-            skills.map((skill) => {
+            [
+                [
+                    'html',
+                    'mdi:language-html5',
+                    <svg
+                        viewBox="0 0 24 24"
+                        class="text-primary h-7 group-hover:scale-[1.2] duration-300 astro-OTZFFIEU"
+                        astro-icon="mdi:language-html5"
+                    >
+                        <path
+                            fill="currentColor"
+                            d="m12 17.56 4.07-1.13.55-6.1H9.38L9.2 8.3h7.6l.2-1.99H7l.56 6.01h6.89l-.23 2.58-2.22.6-2.22-.6-.14-1.66h-2l.29 3.19L12 17.56M4.07 3h15.86L18.5 19.2 12 21l-6.5-1.8L4.07 3z"
+                        />
+                    </svg>,
+                ],
+                [
+                    'css',
+                    'mdi:language-css3',
+                    <svg
+                        viewBox="0 0 24 24"
+                        class="text-primary h-7 group-hover:scale-[1.2] duration-300 astro-OTZFFIEU"
+                        astro-icon="mdi:language-css3"
+                    >
+                        <path
+                            fill="currentColor"
+                            d="m5 3-.65 3.34h13.59L17.5 8.5H3.92l-.66 3.33h13.59l-.76 3.81-5.48 1.81-4.75-1.81.33-1.64H2.85l-.79 4 7.85 3 9.05-3 1.2-6.03.24-1.21L21.94 3H5z"
+                        />
+                    </svg>,
+                ],
+                [
+                    'tailwind',
+                    'mdi:tailwind',
+                    <svg
+                        viewBox="0 0 24 24"
+                        class="text-primary h-7 group-hover:scale-[1.2] duration-300 astro-OTZFFIEU"
+                        astro-icon="mdi:tailwind"
+                    >
+                        <path
+                            fill="currentColor"
+                            d="M12 6c-2.67 0-4.33 1.33-5 4 1-1.33 2.17-1.83 3.5-1.5.76.19 1.31.74 1.91 1.35.98 1 2.09 2.15 4.59 2.15 2.67 0 4.33-1.33 5-4-1 1.33-2.17 1.83-3.5 1.5-.76-.19-1.3-.74-1.91-1.35C15.61 7.15 14.5 6 12 6m-5 6c-2.67 0-4.33 1.33-5 4 1-1.33 2.17-1.83 3.5-1.5.76.19 1.3.74 1.91 1.35C8.39 16.85 9.5 18 12 18c2.67 0 4.33-1.33 5-4-1 1.33-2.17 1.83-3.5 1.5-.76-.19-1.3-.74-1.91-1.35C10.61 13.15 9.5 12 7 12z"
+                        />
+                    </svg>,
+                ],
+                [
+                    'javascript',
+                    'mdi:language-javascript',
+                    <svg
+                        viewBox="0 0 24 24"
+                        class="text-primary h-7 group-hover:scale-[1.2] duration-300 astro-OTZFFIEU"
+                        astro-icon="mdi:language-javascript"
+                    >
+                        <path
+                            fill="currentColor"
+                            d="M3 3h18v18H3V3m4.73 15.04c.4.85 1.19 1.55 2.54 1.55 1.5 0 2.53-.8 2.53-2.55v-5.78h-1.7V17c0 .86-.35 1.08-.9 1.08-.58 0-.82-.4-1.09-.87l-1.38.83m5.98-.18c.5.98 1.51 1.73 3.09 1.73 1.6 0 2.8-.83 2.8-2.36 0-1.41-.81-2.04-2.25-2.66l-.42-.18c-.73-.31-1.04-.52-1.04-1.02 0-.41.31-.73.81-.73.48 0 .8.21 1.09.73l1.31-.87c-.55-.96-1.33-1.33-2.4-1.33-1.51 0-2.48.96-2.48 2.23 0 1.38.81 2.03 2.03 2.55l.42.18c.78.34 1.24.55 1.24 1.13 0 .48-.45.83-1.15.83-.83 0-1.31-.43-1.67-1.03l-1.38.8z"
+                        />
+                    </svg>,
+                ],
+                [
+                    'react',
+                    'mdi:react',
+                    <svg
+                        viewBox="0 0 24 24"
+                        class="text-primary h-7 group-hover:scale-[1.2] duration-300 astro-OTZFFIEU"
+                        astro-icon="mdi:react"
+                    >
+                        <path
+                            fill="currentColor"
+                            d="M12 10.11c1.03 0 1.87.84 1.87 1.89 0 1-.84 1.85-1.87 1.85-1.03 0-1.87-.85-1.87-1.85 0-1.05.84-1.89 1.87-1.89M7.37 20c.63.38 2.01-.2 3.6-1.7-.52-.59-1.03-1.23-1.51-1.9a22.7 22.7 0 0 1-2.4-.36c-.51 2.14-.32 3.61.31 3.96m.71-5.74-.29-.51c-.11.29-.22.58-.29.86.27.06.57.11.88.16l-.3-.51m6.54-.76.81-1.5-.81-1.5c-.3-.53-.62-1-.91-1.47C13.17 9 12.6 9 12 9c-.6 0-1.17 0-1.71.03-.29.47-.61.94-.91 1.47L8.57 12l.81 1.5c.3.53.62 1 .91 1.47.54.03 1.11.03 1.71.03.6 0 1.17 0 1.71-.03.29-.47.61-.94.91-1.47M12 6.78c-.19.22-.39.45-.59.72h1.18c-.2-.27-.4-.5-.59-.72m0 10.44c.19-.22.39-.45.59-.72h-1.18c.2.27.4.5.59.72M16.62 4c-.62-.38-2 .2-3.59 1.7.52.59 1.03 1.23 1.51 1.9.82.08 1.63.2 2.4.36.51-2.14.32-3.61-.32-3.96m-.7 5.74.29.51c.11-.29.22-.58.29-.86-.27-.06-.57-.11-.88-.16l.3.51m1.45-7.05c1.47.84 1.63 3.05 1.01 5.63 2.54.75 4.37 1.99 4.37 3.68 0 1.69-1.83 2.93-4.37 3.68.62 2.58.46 4.79-1.01 5.63-1.46.84-3.45-.12-5.37-1.95-1.92 1.83-3.91 2.79-5.38 1.95-1.46-.84-1.62-3.05-1-5.63-2.54-.75-4.37-1.99-4.37-3.68 0-1.69 1.83-2.93 4.37-3.68-.62-2.58-.46-4.79 1-5.63 1.47-.84 3.46.12 5.38 1.95 1.92-1.83 3.91-2.79 5.37-1.95M17.08 12c.34.75.64 1.5.89 2.26 2.1-.63 3.28-1.53 3.28-2.26 0-.73-1.18-1.63-3.28-2.26-.25.76-.55 1.51-.89 2.26M6.92 12c-.34-.75-.64-1.5-.89-2.26-2.1.63-3.28 1.53-3.28 2.26 0 .73 1.18 1.63 3.28 2.26.25-.76.55-1.51.89-2.26m9 2.26-.3.51c.31-.05.61-.1.88-.16-.07-.28-.18-.57-.29-.86l-.29.51m-2.89 4.04c1.59 1.5 2.97 2.08 3.59 1.7.64-.35.83-1.82.32-3.96-.77.16-1.58.28-2.4.36-.48.67-.99 1.31-1.51 1.9M8.08 9.74l.3-.51c-.31.05-.61.1-.88.16.07.28.18.57.29.86l.29-.51m2.89-4.04C9.38 4.2 8 3.62 7.37 4c-.63.35-.82 1.82-.31 3.96a22.7 22.7 0 0 1 2.4-.36c.48-.67.99-1.31 1.51-1.9z"
+                        />
+                    </svg>,
+                ],
+                [
+                    'nodejs',
+                    'mdi:nodejs',
+                    <svg
+                        viewBox="0 0 24 24"
+                        class="text-primary h-7 group-hover:scale-[1.2] duration-300 astro-OTZFFIEU"
+                        astro-icon="mdi:nodejs"
+                    >
+                        <path
+                            fill="currentColor"
+                            d="M12 1.85c-.27 0-.55.07-.78.2l-7.44 4.3c-.48.28-.78.8-.78 1.36v8.58c0 .56.3 1.08.78 1.36l1.95 1.12c.95.46 1.27.47 1.71.47 1.4 0 2.21-.85 2.21-2.33V8.44c0-.12-.1-.22-.22-.22H8.5c-.13 0-.23.1-.23.22v8.47c0 .66-.68 1.31-1.77.76L4.45 16.5a.26.26 0 0 1-.11-.21V7.71c0-.09.04-.17.11-.21l7.44-4.29c.06-.04.16-.04.22 0l7.44 4.29c.07.04.11.12.11.21v8.58c0 .08-.04.16-.11.21l-7.44 4.29c-.06.04-.16.04-.23 0L10 19.65c-.08-.03-.16-.04-.21-.01-.53.3-.63.36-1.12.51-.12.04-.31.11.07.32l2.48 1.47c.24.14.5.21.78.21s.54-.07.78-.21l7.44-4.29c.48-.28.78-.8.78-1.36V7.71c0-.56-.3-1.08-.78-1.36l-7.44-4.3c-.23-.13-.5-.2-.78-.2M14 8c-2.12 0-3.39.89-3.39 2.39 0 1.61 1.26 2.08 3.3 2.28 2.43.24 2.62.6 2.62 1.08 0 .83-.67 1.18-2.23 1.18-1.98 0-2.4-.49-2.55-1.47a.226.226 0 0 0-.22-.18h-.96c-.12 0-.21.09-.21.22 0 1.24.68 2.74 3.94 2.74 2.35 0 3.7-.93 3.7-2.55 0-1.61-1.08-2.03-3.37-2.34-2.31-.3-2.54-.46-2.54-1 0-.45.2-1.05 1.91-1.05 1.5 0 2.09.33 2.32 1.36.02.1.11.17.21.17h.97c.05 0 .11-.02.15-.07.04-.04.07-.1.05-.16C17.56 8.82 16.38 8 14 8z"
+                        />
+                    </svg>,
+                ],
+                [
+                    'expressjs',
+                    'simple-icons:express',
+                    <svg
+                        viewBox="0 0 24 24"
+                        class="text-primary h-7 group-hover:scale-[1.2] duration-300 astro-OTZFFIEU"
+                        astro-icon="simple-icons:express"
+                    >
+                        <path
+                            fill="currentColor"
+                            d="M24 18.588a1.529 1.529 0 0 1-1.895-.72l-3.45-4.771-.5-.667-4.003 5.444a1.466 1.466 0 0 1-1.802.708l5.158-6.92-4.798-6.251a1.595 1.595 0 0 1 1.9.666l3.576 4.83 3.596-4.81a1.435 1.435 0 0 1 1.788-.668L21.708 7.9l-2.522 3.283a.666.666 0 0 0 0 .994l4.804 6.412zM.002 11.576l.42-2.075c1.154-4.103 5.858-5.81 9.094-3.27 1.895 1.489 2.368 3.597 2.275 5.973H1.116C.943 16.447 4.005 19.009 7.92 17.7a4.078 4.078 0 0 0 2.582-2.876c.207-.666.548-.78 1.174-.588a5.417 5.417 0 0 1-2.589 3.957 6.272 6.272 0 0 1-7.306-.933 6.575 6.575 0 0 1-1.64-3.858c0-.235-.08-.455-.134-.666A88.33 88.33 0 0 1 0 11.577zm1.127-.286h9.654c-.06-3.076-2.001-5.258-4.59-5.278-2.882-.04-4.944 2.094-5.071 5.264z"
+                        />
+                    </svg>,
+                ],
+                [
+                    'vite',
+                    'file-icons:vite',
+                    <svg
+                        viewBox="0 0 510 512"
+                        class="text-primary h-7 group-hover:scale-[1.2] duration-300 astro-OTZFFIEU"
+                        astro-icon="file-icons:vite"
+                    >
+                        <path
+                            fill="currentColor"
+                            d="M493.89 58.275 355.178 83.558 379.282 0 186.79 37.718l-2.999 50.64L15.145 58.214C3.53 57.538-3.238 65.879 1.558 77.46l244.056 427.983c5.253 8.575 17.347 8.91 22.65 0L507.575 77.419c5.4-9.676-2.874-21.018-13.685-19.144zm-237 435.435L17.87 74.556l164.993 29.491-7.778 131.365 67.632-15.608-18.858 92.344 51.374-15.608-25.495 123.397c-1.27 8.069 9.241 12.362 14.44.812l150.22-299.792-74.135 14.308 10.086-34.962 140.91-25.684L256.89 493.71z"
+                        />
+                    </svg>,
+                ],
+                [
+                    'webpack',
+                    'mdi:webpack',
+                    <svg
+                        viewBox="0 0 24 24"
+                        class="text-primary h-7 group-hover:scale-[1.2] duration-300 astro-OTZFFIEU"
+                        astro-icon="mdi:webpack"
+                    >
+                        <path
+                            fill="currentColor"
+                            d="m20.45 17.39-8.09 4.58V18.4l5.04-2.77 3.05 1.76m.55-.5V7.31L18.04 9v6.18L21 16.89m-17.45.5 8.09 4.57V18.4L6.6 15.63l-3.05 1.76m-.55-.5V7.31L5.96 9v6.18L3 16.89m.35-10.2L11.64 2v3.45L6.33 8.37l-.05.02-2.93-1.7m17.3 0L12.36 2v3.45l5.31 2.93.04.02 2.94-1.71m-9.01 10.9-4.97-2.74V9.44l4.97 2.87v5.28m.72 0 4.97-2.73V9.44l-4.97 2.87v5.28M7 8.81l5-2.75 5 2.75-5 2.88-5-2.88z"
+                        />
+                    </svg>,
+                ],
+                [
+                    'Git',
+                    'mdi:git',
+                    <svg
+                        viewBox="0 0 24 24"
+                        class="text-primary h-7 group-hover:scale-[1.2] duration-300 astro-OTZFFIEU"
+                        astro-icon="mdi:git"
+                    >
+                        <path
+                            fill="currentColor"
+                            d="M2.6 10.59 8.38 4.8l1.69 1.7c-.24.85.15 1.78.93 2.23v5.54c-.6.34-1 .99-1 1.73a2 2 0 0 0 2 2 2 2 0 0 0 2-2c0-.74-.4-1.39-1-1.73V9.41l2.07 2.09c-.07.15-.07.32-.07.5a2 2 0 0 0 2 2 2 2 0 0 0 2-2 2 2 0 0 0-2-2c-.18 0-.35 0-.5.07L13.93 7.5a1.98 1.98 0 0 0-1.15-2.34c-.43-.16-.88-.2-1.28-.09L9.8 3.38l.79-.78c.78-.79 2.04-.79 2.82 0l7.99 7.99c.79.78.79 2.04 0 2.82l-7.99 7.99c-.78.79-2.04.79-2.82 0L2.6 13.41c-.79-.78-.79-2.04 0-2.82z"
+                        />
+                    </svg>,
+                ],
+                [
+                    'Github',
+                    'mdi:github',
+                    <svg
+                        viewBox="0 0 24 24"
+                        class="text-primary h-7 group-hover:scale-[1.2] duration-300 astro-OTZFFIEU"
+                        astro-icon="mdi:github"
+                    >
+                        <path
+                            fill="currentColor"
+                            d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34-.46-1.16-1.11-1.47-1.11-1.47-.91-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.87 1.52 2.34 1.07 2.91.83.09-.65.35-1.09.63-1.34-2.22-.25-4.55-1.11-4.55-4.92 0-1.11.38-2 1.03-2.71-.1-.25-.45-1.29.1-2.64 0 0 .84-.27 2.75 1.02.79-.22 1.65-.33 2.5-.33.85 0 1.71.11 2.5.33 1.91-1.29 2.75-1.02 2.75-1.02.55 1.35.2 2.39.1 2.64.65.71 1.03 1.6 1.03 2.71 0 3.82-2.34 4.66-4.57 4.91.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2z"
+                        />
+                    </svg>,
+                ],
+
+                //not sure
+                // ['Rest APIs', 'mdi:github'],
+                // ['neovim', 'simple-icons:neovim'],
+                // ['debian', 'grommet-icons:debian'],
+
+                // not good at
+                // ['Mysql', 'grommet-icons:mysql'],
+                // ['astrojs', 'simple-icons:astro'],
+            ].map((skill) => {
                 return (
                     <li
                         class={`flex flex-no-wrap items-center border-[1px] border-primary py-2
                           px-3 rounded-lg text-primary uppercase subtleHoverSlider group`}
                     >
-                        <Icon class="text-primary h-7 group-hover:scale-[1.2] duration-300" name={skill[1]} />
+                        <!--
+                             <Icon
+                            class="text-primary h-7 group-hover:scale-[1.2] duration-300"
+                            name={skill[1]}
+                        />
+                        -->
+                        {skill[2]}
                         <span class="text-white ml-2 pt-[2px]">{skill[0]}</span>
                     </li>
                 );
