--- a/src/layouts/sharedLayout.astro
+++ b/src/layouts/sharedLayout.astro
@@ -7,6 +7,7 @@ const classes = {
            after:h-[2px] after:w-full after:bg-primary`,
 };
 ---
+
 <script>
     const button = document.getElementById('showMenu');
     button.addEventListener('click', (e) => {
@@ -21,16 +22,6 @@ const classes = {
             e.currentTarget.setAttribute('aria-expanded', 'false');
         }
     });
-    const mobileMenu = document.getElementById('mobileMenu');
-    mobileMenu.addEventListener('click', (e) => {
-        const target = e.currentTarget;
-        target.classList.toggle('hidden');
-        // toggle aria-expanded
-        const button = document.getElementById('showMenu');
-        const ariaExpandedAttr = button.getAttribute('aria-expanded');
-        console.log(ariaExpandedAttr);
-        button.setAttribute('aria-expanded', !ariaExpandedAttr);
-    });
 </script>
 
 <style>
@@ -41,7 +32,8 @@ const classes = {
         /*tailwind cannot do this*/
         transform: scaleX(0);
     }
-    .navlink:hover:after {
+    .navlink:hover:after,
+    .navlink.active:after {
         transition-duration: 0.3s;
         transform: scaleX(1);
     }
@@ -73,12 +65,35 @@ const classes = {
         class={`pt-1 ml-auto
                 nav>:hidden`}
     >
-        <ul class="flex gap-3">
-            <li><a href="#intro" class={classes.link}>intro</a></li>
-            <li><a href="#portfolio" class={classes.link}>Portfolio</a></li>
-            <li><a href="#skills" class={classes.link}>Skills</a></li>
-            <li><a href="#about" class={classes.link}>About</a></li>
-            <li><a href="#contact" class={classes.link}>Contact</a></li>
+        <script>
+            addEventListener('hashchange', () => {
+                Array.from(document.getElementById('navlinks').children).forEach(
+                    (link) => {
+                        link.children[0].classList.remove('active');
+                    }
+                );
+                document
+                    .getElementById('NavLink#' + document.location.href.split('#')[1])
+                    .classList.add('active');
+            });
+        </script>
+
+        <ul class="flex gap-3" id="navlinks">
+            {
+                ['intro', 'portfolio', 'skills', 'about', 'contact'].map((link) => {
+                    return (
+                        <li>
+                            <a
+                                id={`NavLink#${link}`}
+                                href={`#${link}`}
+                                class={classes.link}
+                            >
+                                {link}
+                            </a>
+                        </li>
+                    );
+                })
+            }
         </ul>
     </nav>
     <button
@@ -106,10 +121,20 @@ const classes = {
     </ul>
 </nav>
 
-
 <slot />
 
 <footer class="mt-10 py-4 px-2 leading-7 text-center">
     CopyRight © 2022 | made by <span class="text-primary capitalize">astronaut</span> using
-    <Icon class="w-7 inline" name="vscode-icons:file-type-astro" />
+    <!-- <Icon class="w-7 inline" name="vscode-icons:file-type-astro" /> -->
+    <svg
+        viewBox="0 0 32 32"
+        class="w-7 inline astro-T7GGGKUI"
+        astro-icon="vscode-icons:file-type-astro"
+    >
+        <path
+            fill="#ff5d01"
+            fill-rule="evenodd"
+            d="M5.9 18.847a7.507 7.507 0 0 0-.572 2.624 3.265 3.265 0 0 0 .551 1.553 7.427 7.427 0 0 0 2.093 1.681l5.128 3.414a7.332 7.332 0 0 0 2.1 1.168 3.239 3.239 0 0 0 1.5 0 7.381 7.381 0 0 0 2.117-1.16L24 24.711a7.512 7.512 0 0 0 2.117-1.688 3.241 3.241 0 0 0 .55-1.563 7.515 7.515 0 0 0-.587-2.643L21.547 4.551a3.973 3.973 0 0 0-.54-1.3 1.733 1.733 0 0 0-.7-.51 3.972 3.972 0 0 0-1.4-.122h-5.902a3.932 3.932 0 0 0-1.4.125 1.713 1.713 0 0 0-.7.512 3.94 3.94 0 0 0-.535 1.3L5.9 18.848zm13.24-13.2a3.329 3.329 0 0 1 .441 1.093l3.892 12.784a16.168 16.168 0 0 0-4.653-1.573l-2.529-8.56a.331.331 0 0 0-.513-.169.323.323 0 0 0-.119.169l-2.5 8.557a16.14 16.14 0 0 0-4.674 1.579l3.908-12.784a3.281 3.281 0 0 1 .442-1.094 1.458 1.458 0 0 1 .582-.43 3.31 3.31 0 0 1 1.175-.1h2.793a3.314 3.314 0 0 1 1.176.1 1.454 1.454 0 0 1 .583.432zM16.127 21.06a5.551 5.551 0 0 0 3.4-.923 2.8 2.8 0 0 1-.207 2.182 3.938 3.938 0 0 1-1.547 1.481c-.674.428-1.254.8-1.254 1.787a2.079 2.079 0 0 0 .209.914 2.49 2.49 0 0 1-1.535-2.3v-.061c0-.683 0-1.524-.962-1.524a1.028 1.028 0 0 0-.391.077 1.021 1.021 0 0 0-.552.551 1.03 1.03 0 0 0-.079.391 3.769 3.769 0 0 1-.988-2.644 4.206 4.206 0 0 1 .175-1.248c.4.757 1.92 1.32 3.731 1.32z"
+        ></path>
+    </svg>
 </footer>
