feat: setting up multi lang feature

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -22,7 +22,7 @@ import Icon from 'astro-icon';
                 Not sure what you're looking for.
                 <br />
                 but you can go back
-                <a href="/" class="underline text-primary">
+                <a href="/en" class="underline text-primary">
                     <Icon name="ic:twotone-home" class="inline w-10" />
                 </a>
             </h1>
