minor: adding some images

--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -18,13 +18,13 @@ const lang:string = Astro.params.lang;
 ---
 
 <html style='scroll-behavior: smooth;' lang={lang}>
-    <head>
+    <heade>
         <meta charset="utf-8" />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
         <title>Astronaut</title>
-    </head>
+    </heade>
     <body class="text-white bg-gray-900 overflow-x-hidden">
         <SharedLayout>
             <Hero />
