--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ section {
 html{
     font-size: min(calc(1rem + 6 * (20vw / 680)), 1.35rem);
     font-family: "Roboto", sans-serif;
+    scroll-behavior: smooth;
 }
 
 h1, h2{
