--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -46,8 +46,8 @@ const classes = {
                         fill="#37474F"
                         d="M31 31H17c-1.1 0-2-.9-2-2V19c0-1.1.9-2 2-2h14c1.1 0 2 .9 2 2v10c0 1.1-.9 2-2 2z"
                     ></path>
-                </svg>, Web engineers blew my mind
-                <!-- <Icon name="noto:brain" class="w-6 inline text-primary" />, -->
+                </svg>, web engineers blew my mind
+                <!-- <Icon name="noto:brain" class="w-6 inline text-primary" /> -->
                 <svg
                     viewBox="0 0 128 128"
                     class="w-6 inline text-primary"
@@ -93,13 +93,13 @@ const classes = {
                         fill="#f07371"
                         d="M52.86 44.9c.74.03 1.48-.13 2.14-.44-.38 1.47.6 2.9 1.41 4.18.59.94 1.41 2.61.52 4.32 0 0 1.34-.75 3.51-1.38s4.29-.77 4.29-.77c-1.54-.32-3.82-1.19-4.52-2.4-2.27-3.95-2.35-16.09 4.93-14.71 2.25.43 3.92 2.38 4.08 3.83.1.92-.47 1.72-1.2 2.34a1.49 1.49 0 0 0-.3 1.91c.48.79 1.56.96 2.26.37 2.05-1.76 2.37-3.61 2.22-4.95-.47-4.27-5.28-6.68-9.1-6.79-.84-.03-1.81-.3-2.13-1.09-.14-.34-.12-.71-.15-1.07-.2-2.55-2.81-5.32-4.85-6.64-.75-.49-1.76-.17-2.15.63-.33.69-.07 1.5.57 1.92 1.94 1.28 3.12 3.14 3.51 5.54.44 2.76-.16 5.58-1.32 8.09-.58 1.26-1.29 2.48-2.12 3.6-.71.97-1.72 1.62-2.18 2.78-.05.13-.1.27-.06.4.07.25.38.32.64.33z"
                     ></path>
-                </svg>, with the new captivating and carefully crafted solutions to
+                </svg> with the new captivating and carefully crafted solutions to
                 certain problem.
             </p>
             <p class="">
-                And here I am going their path looking for a chance to do the same with
+                And here I am, going their path, looking for a chance to do the same with
                 other curious and ambitious
-                <!-- <Icon name="noto:astronaut-medium-skin-tone" class="w-6 inline text-primary" />, -->
+                <!-- <Icon name="noto:astronaut-medium-skin-tone" class="w-6 inline text-primary" /> -->
                 <svg
                     viewBox="0 0 128 128"
                     class="w-6 inline text-primary"
@@ -265,7 +265,7 @@ const classes = {
                         </radialGradient>
                         <path fill="url(#astroicon:noto:astronaut-medium-skin-tonen)"
                             d="M64.01 22.61c21.75 0 40.51 12.81 49.16 31.29 0-.24.02-.49.02-.73C113.19 26.02 91.17 4 64.01 4c-27.46 0-49.6 22.38-49.18 49.18 0 .24.02.49.02.73 8.65-18.49 27.41-31.3 49.16-31.3z" />
-                    </svg>,
+                    </svg>
                 people like me.
             </p>
         </div>
