--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -293,7 +293,7 @@ const classes = {
             <tr class={`${classes.tableBorder} ${classes.selectiveHighlight}`}>
                 <td class={`${classes.tableBorder} ${classes.colPadding}`}>2021</td>
                 <td class={`${classes.tableBorder} ${classes.colPadding}`}
-                    >Making windows malware.</td
+                    >Making windows binaries.</td
                 >
             </tr>
             <tr class={`${classes.tableBorder} ${classes.selectiveHighlight}`}>
