enhancement: fixed typos; added my name and social links.

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -26,7 +26,7 @@ import SocialMedia from './shared/socialMedia.astro';
             aria-label="my name"
             class="text-primary capitalize uppercase text-xl tracking-wider mb-1"
         >
-            I'm astronaut
+            I'm Anas
         </p>
         <!-- hero title -->
         <script>
@@ -56,7 +56,7 @@ import SocialMedia from './shared/socialMedia.astro';
         </h1>
 
         <p class={`max-w-[25rem] leading-relaxed first-letter:uppercase text-xl`}>
-            I write sweat code
+            I write sweet code
             <!-- <Icon name="noto:honey-pot" class="w-6 inline" /> -->
             <svg
                 viewBox="0 0 128 128"
@@ -127,8 +127,8 @@ import SocialMedia from './shared/socialMedia.astro';
             <a
                 class={`text-primary capitalize py-[5px] border-[1px] border-primary px-3 py-2 rounded-xl
                         subtleHoverSlider group flex justify-center items-center`}
-                href="/media/projects/snipshare.jpeg"
-                download="astronaut_resume.pdf"
+                href="/media/anas-ouardini.pdf"
+                download="anas-ouardini.pdf"
             >
                 <!-- <Icon
                     name="ic:outline-file-download"
