--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -8,7 +8,7 @@ import Icon from 'astro-icon';
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
-        <title>Astronaut</title>
+        <title>Anas</title>
     </head>
     <body
         class="text-white bg-gray-900 overflow-x-hidden min-h-[100vh] flex justify-center items-center"
