--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -54,7 +54,7 @@ const lang: string = Astro.params.lang;
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
-        <title>Astronaut</title>
+        <title>anas</title>
     </head>
     <body class="text-white bg-gray-900 overflow-x-hidden">
         <SharedLayout>
