--- a/src/components/portfolio.astro
+++ b/src/components/portfolio.astro
@@ -39,28 +39,27 @@ const projectItems: projectItemsT = [
         },
         details: {
             title: 'SnipShare: snippet sharing',
-            idea: `An app for sharing pieces of code with others, it also has the feature of granting access of one's
-                  account to another person which envolves a bit of authentication and authorization.`,
+            idea: `An app for sharing pieces of code with others. It also has the feature of granting access
+                    to one's account to another person, which involves a bit of authentication and authorization.`,
             obstacles: [
                 [
                     "I couldn't get google Auth to work",
-                    "I've just gone through their documentation despite it's longivity."
+                    "I've just gone through their documentation despite its longevity."
                 ],
                 [
                     "I was losing a lot of time on tiny mistakes that would require a lot of debugging.",
-                    "I introduced TypeScript to the project which reduced the effectiveness of those pain pionts"
+                    "I introduced TypeScript to the project which reduced the effectiveness of those pain points"
                 ],
                 [
-                    `I got slowed down by the fact that I couldn't revert back to some old code; my git commits
-                    weren't professional`,
-                    `I learned how to write a proper git commit, after which I got really
-                    confortable with browsing git's history whenever I needed.`
+                    `I got slowed down by the fact that I couldn't revert back to an old state.`,
+                    `My Git commits weren't professional, but I learned how to write a proper commit, after which I got really
+                    comfortable with browsing Git's history whenever I needed.`
                 ],
                 // [
                 //     `I had to spend a lot of time convincing other people to use this project in order to give me feedback.`,
                 //     `I overcame this problem thanks to a very kind person on discord, who recommended I add a way to easily
                 //     navigate between accounts and default values in forms so that they're not required to think too much about
-                //     it, etc. It worked like charm, people actually enjoyed using it.`
+                //     it, etc. It worked like a charm, people actually enjoyed using it.`
                 // ]
                       ],
             tools: [
@@ -78,22 +77,24 @@ const projectItems: projectItemsT = [
       },
       details: {
         title: 'SmartTeam: for managing teams/projects',
-        idea: `I've made a really typical project (todo app) but I wasn't satisfied with it due to its simplicity,
-              after which I decided to make another complex version of it, instead of just managing tasks, this one
-              is about managing tasks within projects within groups of projects.`,
+        idea: `I initially developed a typical project management application (a to-do app), but I found it too simplistic.
+                As a result, I decided to create a more comprehensive version that not only manages tasks but also organizes
+                them within projects and groups of projects.`,
         obstacles: [
           [
-            `The structure of the database was a bit comfusing and I couldn't wrap my head around it.`,
-            `I used a whiteboard tool to write my ideas down and compare them to filter down the worst ones
-              and start working as fast as possible.`
+            `The Structure of the Database Was Confusing, and I Struggled to Grasp It.`,
+            `To tackle this challenge, I utilized a whiteboard tool to jot down my ideas, compare them, and filter
+             out the less viable ones. This approach helped me start working on the project promptly.`
           ],
           [
-            `I got really stuck trying to hack around the inherintly restrictive nature of the REST protocol.`,
-            `Sometimes, standards can get in your way, and you can't help it but to take the non-standard route.`
+            `I Encountered Difficulties Working Within the Inherently Restrictive Nature of the REST Protocol.`,
+            `At times, adhering strictly to standards can impede progress. I had to explore alternative approaches
+             to overcome these limitations and find workarounds.`
           ],
           [
-            `I got to a point where I couldn't get any further with the project due to the complexity cumulated over time.`,
-            `Refactoring was the only solution I could think about, I realized that I should've been refactoring more frequently.`
+            `The Complexity of the Project Eventually Became Overwhelming, Hindering Further Progress.`,
+            `Realizing that the accumulated complexity was becoming a hindrance, I recognized the need for refactoring.
+             I understood the importance of incorporating refactoring into my development process at more frequent intervals.`
           ]
         ],
         tools: [
@@ -110,13 +111,21 @@ const projectItems: projectItemsT = [
       },
       details: {
           title: 'Algolizer: algorithms visualizer',
-          idea: `The project highlights the "performance" difference between algorithms and data structues.
-                 It makes it easier to spot those differences and understand that it's not just black and white
-                 and it's not always about saving CPU cycles.`,
+          idea: `The project aims to highlight the "performance" differences among algorithms and data structures. It
+                 provides a visual representation that facilitates the identification of these differences, emphasizing
+                 that the matter is not simply black and white, and it extends beyond optimizing CPU cycles.`,
           obstacles: [
             [
-              `I couldn't get each algorithm to run in a separate thread/web worker without spending too much time on this.`,
-              `I just re-invented the wheel, by writing a really simple "context switcher".`
+              `I Couldn't Get Each Algorithm To Run In A Separate Thread (Web Worker) Without Spending Too Much Time.`,
+              `To address this issue, I developed a custom "context switcher" as a solution, inadvertently reinventing
+                the wheel. However, this implementation allowed me to effectively manage running each algorithm in a separate
+                thread, saving valuable time.`
+            ],
+            [
+              `I Got Overwhelmed By the Project's Numerous Components.`,
+              `To alleviate this challenge, I adopted a divide-and-conquer approach by extracting the problematic
+               logic and implementing it in an online sandbox. This approach greatly facilitated the debugging process
+               and improved overall project management.`
             ]
           ],
           tools: ['html', 'css', 'tailwind', 'js', 'react', 'typescript', 'react-chartjs-2'],
