--- a/src/components/shared/socialMedia.astro
+++ b/src/components/shared/socialMedia.astro
@@ -5,7 +5,7 @@ const classes = {ul: Astro.props.style};
 
 <ul aria-label="socialMedia links" class={`flex gap-3 mt-5 text-primary ${classes.ul}`}>
     <li>
-        <a href="https:twitter.com" target="_blank">
+        <a href="https://twitter.com/segfaulty1" target="_blank">
             <!-- <Icon
                 name="ph:twitter-logo-bold"
                 class="h-10 w-8 hover:scale-[1.2] duration-300"
@@ -23,7 +23,7 @@ const classes = {ul: Astro.props.style};
         </a>
     </li>
     <li>
-        <a href="https:linkedin.com" target="_blank">
+        <a href="https://linkedin.com/in/segfaulty" target="_blank">
             <!-- <Icon
                 name="ri:linkedin-line"
                 class="h-10 w-8 hover:scale-[1.2] duration-300"
@@ -41,7 +41,7 @@ const classes = {ul: Astro.props.style};
         </a>
     </li>
     <li>
-        <a href="https:github.com" target="_blank">
+        <a href="https://github.com/segfaulty1" target="_blank">
             <!-- <Icon
                 name="ri:github-line"
                 class="h-10 w-8 hover:scale-[1.2] duration-300"
