--- a/src/layouts/sharedLayout.astro
+++ b/src/layouts/sharedLayout.astro
@@ -58,7 +58,7 @@ const classes = {
                 d="M18.97 19.757L15.35 5.272A2.996 2.996 0 0 0 12.437 3h-.877a2.996 2.996 0 0 0-2.91 2.272L5.03 19.757a1 1 0 0 0 1.94.486L8.28 15h7.44l1.31 5.243a1 1 0 0 0 1.94-.486ZM8.78 13l1.811-7.242a.998.998 0 0 1 .97-.758h.878a.998.998 0 0 1 .97.758L15.219 13Z"
             ></path>
         </svg>
-        <a href="#intro">stronaut</a>
+        <a href="#intro">nas</a>
     </div>
     <nav
         aria-label="wide screen navigation"
@@ -124,7 +124,7 @@ if(section) {section.classList.add('active');}
 <slot />
 
 <footer class="mt-10 py-4 px-2 leading-7 text-center">
-    CopyRight © 2022 | made by <span class="text-primary capitalize">astronaut</span> using
+    Copyright © 2023 | made by <span class="text-primary capitalize">Anas</span> using
     <!-- <Icon class="w-7 inline" name="vscode-icons:file-type-astro" /> -->
     <svg
         viewBox="0 0 32 32"
